<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/judul"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/nim"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/nama"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/berat_badan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edtWeight"
        android:inputType="numberDecimal"
        android:hint="@string/kg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/tinggi_badan"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtHeight"
        android:inputType="numberDecimal"
        android:hint="@string/cm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnCalculate"
        android:text="@string/hitung_bmi"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
